# aerso

./: CITATION.cff  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: demo.rs
src/: aero.rs  effectors.rs  kinematics.rs  lib.rs  types.rs
src/wind_models/: constantwind.rs  logwind.rs  mod.rs  powerwind.rs
tests/: aero_tests.rs  basic_tests.rs
