[package]
name = "aerso"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29"
num-traits = "0.2"
approx = "0.3.2"
physical_constants = "0.4.1"
rstest = "0.11.0"

[lib]
name = "aerso"

[features]
single-precision = []
constrain-qnorm-drift = []
